fixed the giving button overlap

--- a/less/ualberta/modules/make-a-gift.less
+++ b/less/ualberta/modules/make-a-gift.less
@@ -1,9 +1,13 @@
-.make-a-gift {
-  .btn-give.btn-micro {
+.btn-give.btn-micro {
     padding-top: 0.75em;
     padding-bottom: 0.65em;
-    padding-right: 10px;
-    font-size: 1em;
+    padding-right: 25px;
+    font-size: 0.85em;
     margin-bottom: 4px;
-  }
+}
+.make-a-gift .btn-give.btn-micro {
+	font-size: 1em;
+}
+.uofa {
+	white-space: nowrap;
 }
